--- a/templates/layouts/Juego.html
+++ b/templates/layouts/Juego.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Juego: Atrapa el topo</title>
     <link rel="stylesheet" href="/static/css/JuegoStyle.css">
+
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                     <h2>Topos atrapados:</h2>
                     <h2 id="puntaje">0</h2>
                     <img src="/static/img/reloj.png" height="60" width="70" alt="Botón"></a>
-                    <h2 id="tiempo">50</h2>
+                    <h2 id="tiempo">40</h2>
                 </div>
             </div>
 
@@ -57,6 +58,8 @@
 
     <center><button onClick="window.location.reload();" class="btn"></button></center>
     <br>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
