--- a/templates/layouts/Juego.html
+++ b/templates/layouts/Juego.html
@@ -22,10 +22,10 @@
             <div>
                 <div>
                     <h1>¡ATRAPA EL TOPO!</h1>
-                    <h2>Topos atrapados:</h2>
+                    <img src="/static/img/topo1.png" height="80" width="90" alt="Botón"></a>
                     <h2 id="puntaje">0</h2>
-                    <img src="/static/img/reloj.png" height="60" width="70" alt="Botón"></a>
-                    <h2 id="tiempo">40</h2>
+                    <img src="/static/img/reloj.png" height="80" width="90" alt="Botón"></a>
+                    <h2 id="tiempo">20</h2>
                 </div>
             </div>
 
