--- a/templates/layouts/NiñosB.html
+++ b/templates/layouts/NiñosB.html
@@ -20,33 +20,33 @@
     <div class="d-flex justify-content-evenly">
 
         <form>
-            <div class="card" style="width: 18rem;" id="juan1" name="juan1">
+            <div class="card" style="width: 18rem;">
                 <div class="card" style="width: 18rem;">
-                    <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/pictures/articulos2/42000/42476-4-ninos-demasiado-tranquilos-y-relajados.jpg" id="simon1" height="285px" style="border-radius: 10px;"></a>
+                    <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/pictures/articulos/48-4-nino-de-cinco-anos.jpg" height="285px" style="border-radius: 10px;"></a>
                     <div class="card-body">
                         <center>
-                            <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Juan" id="juan1" name="juan1" />
+                            <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Hector" />
                         </center>
                     </div>
                 </div>
             </div>
         </form>
 
-        <div class="card" style="width: 18rem;" name="simon1" id="simon1">
-            <a href="/Juego"> <img class="zoom" src="https://sc04.alicdn.com/kf/HTB1K3N6XZrrK1Rjy1zeq6xalFXa8.jpg" id="simon1" height="285px" style="border-radius: 10px;"></a>
+        <div class="card" style="width: 18rem;">
+            <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/media/27545/c/el-desarrollo-de-un-nino-de-8-anos-y-que-hacer-para-motivarle-sm.jpg" height="285px" style="border-radius: 10px;"></a>
             <div class="card-body">
                 <center>
-                    <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Sofia" selected disabled />
+                    <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Grace" selected disabled />
                 </center>
             </div>
         </div>
 
         <div>
             <div class="card" style="width: 18rem;">
-                <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/media/20588/c/asi-es-el-desarrollo-psicomotor-y-la-evolucion-en-ninos-de-4-a-6-anos-lg.jpg" id="simon1" height="285px" style="border-radius: 10px;"></a>
+                <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/pictures/articulos/39503-que-aprenden-los-ninos-con-5-anos.jpg" id="simon1" height="285px" style="border-radius: 10px;"></a>
                 <div class="card-body">
                     <center>
-                        <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Simon" selected disabled />
+                        <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Fabricio" selected disabled />
                     </center>
                 </div>
             </div>
@@ -60,20 +60,20 @@
     <br><br>
     <div class="d-flex justify-content-evenly">
         <div class="card" style="width: 16rem;">
-            <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/media/23786/c/cambios-en-el-desarrollo-y-aprendizaje-de-los-ninos-de-cuatro-anos-md.jpg" id="julissa1" height="253px" style="border-radius: 10px;"> </a>
+            <a href="/Juego"> <img class="zoom" src="https://thumbs.dreamstime.com/b/ni%C3%B1a-5-a%C3%B1os-aislados-en-un-backgrou-blanco-10565386.jpg" height="325px" style="border-radius: 10px;"> </a>
             <div class=" card-body ">
                 <br>
                 <center>
-                    <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Diana" selected disabled />
+                    <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Emily" selected disabled />
                 </center>
             </div>
         </div>
 
         <div class="card " style="width: 16rem; ">
-            <a href="/Juego"> <img class="zoom " src="https://pequelia.republica.com/files/2013/08/telefono_ninos_5-431x500.jpg " id="frank1 " height="295px" style="border-radius: 10px;" height="296px" style="border-radius: 10px;"></a>
+            <a href="/Juego"> <img class="zoom " src="https://www.cdc.gov/ncbddd/spanish/childdevelopment/positiveparenting/images/preschool-400px.jpg" height="267px" style="border-radius: 10px;"></a>
             <div class="card-body ">
                 <center>
-                    <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Frak" selected disabled />
+                    <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Daniel" selected disabled />
                 </center>
             </div>
         </div>
