--- a/templates/layouts/loginAdmin.html
+++ b/templates/layouts/loginAdmin.html
@@ -17,7 +17,8 @@
                     <div class="card" style="border-radius: 1rem;">
                         <div class="row g-0">
                             <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="https://img.freepik.com/vector-premium/educacion-linea-libros-mochilas-docentes-estudiantes_24640-63755.jpg?w=740" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                                <br><br>
+                                <img src="https://organizacionempresa.com/wp-content/uploads/2018/06/cualidades-del-administrador-1024x775.jpg" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;"/>
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
@@ -26,19 +27,12 @@
                                             <span class="h1 fw-bold mb-0">Insititucion Patitos Felices</span>
                                         </div>
 
-                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Docente Inicie Sesion</h5>
+                                        <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Administrador Inicie Sesion</h5>
                                         <div class="form-outline mb-4">
                                             <input type="email" class="form-control form-control-lg" placeholder="Correo" name="email" id="email" />
                                         </div>
                                         <div class="form-outline mb-4">
                                             <input type="password" class="form-control form-control-lg" placeholder="Contraseña" name="password" id="password" />
-                                        </div>
-                                        <div class="form-group">
-                                            <select class="form-control" name="preescolar" id="preescolar">
-                                                <option class="hidden" selected disabled>Curso</option>
-                                                <option value="Preescolar 1">Preescolar 1</option>
-                                                <option value="Preescolar 2">Preescolar 2</option>
-                                            </select>
                                         </div>
                                         <br>
                                         <center>
