--- a/templates/layouts/Niño.html
+++ b/templates/layouts/Niño.html
@@ -22,10 +22,10 @@
         <form>
             <div class="card" style="width: 18rem;" id="juan1" name="juan1">
                 <div class="card" style="width: 18rem;">
-                    <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/pictures/articulos2/42000/42476-4-ninos-demasiado-tranquilos-y-relajados.jpg" id="simon1" height="285px" style="border-radius: 10px;"></a>
+                    <a href="#"> <img class="zoom" src="https://static.guiainfantil.com/pictures/articulos2/42000/42476-4-ninos-demasiado-tranquilos-y-relajados.jpg" id="JuanImagen" height="285px" style="border-radius: 10px;" value="Juan"></a>
                     <div class="card-body">
                         <center>
-                            <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Juan" id="juan1" name="juan1" />
+                            <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Juan" selected disabled  />
                         </center>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
         </form>
 
         <div class="card" style="width: 18rem;" name="simon1" id="simon1">
-            <a href="/Juego"> <img class="zoom" src="https://sc04.alicdn.com/kf/HTB1K3N6XZrrK1Rjy1zeq6xalFXa8.jpg" id="simon1" height="285px" style="border-radius: 10px;"></a>
+            <a href="/Juego"> <img class="zoom" src="https://sc04.alicdn.com/kf/HTB1K3N6XZrrK1Rjy1zeq6xalFXa8.jpg" id="sofiaImagen" height="285px" style="border-radius: 10px;" value="Sofia"></a>
             <div class="card-body">
                 <center>
                     <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Sofia" selected disabled />
@@ -43,7 +43,7 @@
 
         <div>
             <div class="card" style="width: 18rem;">
-                <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/media/20588/c/asi-es-el-desarrollo-psicomotor-y-la-evolucion-en-ninos-de-4-a-6-anos-lg.jpg" id="simon1" height="285px" style="border-radius: 10px;"></a>
+                <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/media/20588/c/asi-es-el-desarrollo-psicomotor-y-la-evolucion-en-ninos-de-4-a-6-anos-lg.jpg" id="simonImagen" height="285px" style="border-radius: 10px;" value="Simon"></a>
                 <div class="card-body">
                     <center>
                         <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Simon" selected disabled />
@@ -60,7 +60,7 @@
     <br><br>
     <div class="d-flex justify-content-evenly">
         <div class="card" style="width: 16rem;">
-            <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/media/23786/c/cambios-en-el-desarrollo-y-aprendizaje-de-los-ninos-de-cuatro-anos-md.jpg" id="julissa1" height="253px" style="border-radius: 10px;"> </a>
+            <a href="/Juego"> <img class="zoom" src="https://static.guiainfantil.com/media/23786/c/cambios-en-el-desarrollo-y-aprendizaje-de-los-ninos-de-cuatro-anos-md.jpg" id="DianaImagen" height="253px" style="border-radius: 10px;" value="Simon"> </a>
             <div class=" card-body ">
                 <br>
                 <center>
@@ -70,7 +70,7 @@
         </div>
 
         <div class="card " style="width: 16rem; ">
-            <a href="/Juego"> <img class="zoom " src="https://pequelia.republica.com/files/2013/08/telefono_ninos_5-431x500.jpg " id="frank1 " height="295px" style="border-radius: 10px;" height="296px" style="border-radius: 10px;"></a>
+            <a href="/Juego"> <img class="zoom " src="https://pequelia.republica.com/files/2013/08/telefono_ninos_5-431x500.jpg " id="FrakImagen" height="295px" style="border-radius: 10px;" height="296px" style="border-radius: 10px;" value="Frak"></a>
             <div class="card-body ">
                 <center>
                     <input type="tet" class="form-control form-control-lg" style="text-align:center" value="Frak" selected disabled />
@@ -90,17 +90,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js " integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2 " crossorigin="anonymous "></script>
 
+
+<script src="/static/js/datos.js" charset="utf-8 "></script>
+
 </html>
-
-
-
-<!--        
-    <div class="card " style="width: 16rem; ">
-        <a href="/Juego"> <img class="zoom " src="https://pequelia.republica.com/files/2013/08/telefono_ninos_5-431x500.jpg " id="frank1 " height="295px" style="border-radius: 10px;" height="296px" style="border-radius: 10px;"></a>
-        <div class="card-body ">
-            <center>
-                <p class="card-text ">FRANK</p>
-            </center>
-        </div>
-    </div>
--->
