--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -9,13 +9,14 @@
     <!-- bootstrap-->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" >
 
     <title>Escuela Patitos Felices</title>
 </head>
 
 <body>
     <!-- Responsive navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #047cfc;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #9A616D;">
         <div class="container px-5">
             <h3>
                 <a class="navbar-brand" href="/"><img src="/static/img/logo_pato.png" width="80px" height="50px">Insititucion Patitos Felices</a>
@@ -94,7 +95,7 @@
                 <!--Reccionara al login para su inicio de sesion-->
             </div>
         </div>
-        <br><br><br>
+        <br><br>
             <!-- Call to Action-->
         <div class="card text-white bg-secondary my-4 py-2 text-center">
             <div class="card-body">
@@ -102,7 +103,7 @@
             </div>
         </div>
     </div>
-
+   
 </body>
 
 </html>
