--- a/templates/layouts/loginAdmin.html
+++ b/templates/layouts/loginAdmin.html
@@ -22,7 +22,7 @@
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
-                                    <form action="/" method="post">
+                                    <form action="/loginAdmin" method="post">
                                         <div class="d-flex align-items-center mb-3 pb-1">
                                             <span class="h1 fw-bold mb-0">Insititucion Patitos Felices</span>
                                         </div>
