--- a/templates/layouts/loginAdmin.html
+++ b/templates/layouts/loginAdmin.html
@@ -29,7 +29,7 @@
 
                                         <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Administrador Inicie Sesion</h5>
                                         <div class="form-outline mb-4">
-                                            <input type="email" class="form-control form-control-lg" placeholder="Correo" name="email" id="email" />
+                                            <input type="text" class="form-control form-control-lg" placeholder="Usuario" name="Usuario" id="Usuario" />
                                         </div>
                                         <div class="form-outline mb-4">
                                             <input type="password" class="form-control form-control-lg" placeholder="Contraseña" name="password" id="password" />
